--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "google-map-react": "^2.2.0",
     "react-hover": "^3.0.1",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.8.9"
