--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,14 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=SPITALI; Trusted_Connection=True;Encrypt=False;TrustServerCertificate=True"
+  }
 }
+
