--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=SPITALI; Trusted_Connection=True;Encrypt=False;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost;Database=SPITALI; Trusted_Connection=True;Encrypt=False;TrustServerCertificate=True"
   }
 }
 
